2004-08-12  Christophe Fergeau  <teuf@gnome.org>

	* configure.in: post release version bump

=== gnome-vfs 2.6.2 ===

2004-08-12  Christophe Fergeau  <teuf@gnome.org>

	* NEWS: updated

2004-08-12  Ryan Lortie  <desrt@desrt.ca>

	* libgnomevfs/gnome-vfs-private-utils.c: (_gnome_vfs_have_ipv6):
	* libgnomevfs/gnome-vfs-ssl.c: (_gnome_vfs_ssl_init),
	(gnome_vfs_ssl_enabled):
	* modules/computer-method.c: (get_data_for_network),
	(get_data_for_home), (get_data_for_root):
	* modules/extfs-method.c: (getdelim):
	* modules/fstype.c: (filesystem_type), (filesystem_type_uncached),
	(xatoi): don't use old K&R function prototypes, use ANSI prototypes.

2004-08-10  Christophe Fergeau  <teuf@gnome.org>

	* modules/sftp-method.c: add missing comma to fix compilation

2004-08-10  Christophe Fergeau  <teuf@gnome.org>

	Backport fixes from HEAD:
	* modules/sftp-method.c: fix potential deadlock in sftp_get_connection
	  (Ryan Lortie <desrt@desrt.ca>, fixes #149273)
	* libgnomevfs/gnome-vfs-ssl.c: Changed #if to #ifdef. This should
	  fix bug #149205. (Christian Kellner  <gicmo@gnome-de.org>)
	* modules/sftp-method.c: Use memset instead of bzero, fixes #149206.
	  (Christian Kellner  <gicmo@gnome-de.org>)
	
2004-08-09  Ryan Lortie  <desrt@desrt.ca>

	* libgnomevfs/gnome-vfs-utils.c (gnome_vfs_get_volume_free_space):
	Fixed small memory leak. Fixes bug #149333.

2004-07-31  Christophe Fergeau  <teuf@gnome.org>

	* modules/ftp-method.c: (do_transfer_command): use
	  GNOME_VFS_OFFSET_FORMAT_STR when printing a GnomeVFSFileOffset (fixes
	  #148913)

2004-07-30  Christophe Fergeau  <teuf@gnome.org>

	* libgnomevfs/gnome-vfs-utils.c: (gnome_vfs_get_volume_free_space):
	  Fixed a small memory leak

2004-07-22  Christophe Fergeau <teuf@gnome.org>

	* libgnomevfs/gnome-vfs-utils.c: always use lower case URI schemes
	  when looking for the handler for a given scheme.

2004-07-20  Josselin Mouette <joss@debian.org>

	* modules/tar-method.c: fixed crash when opening tar:/// in Nautilus.