@@ -785,14 +785,6 @@ gnome-vfs.spec
 libgnomevfs/gnome-vfs-file-size.h
 libgnomevfs/Makefile
 modules/Makefile
-modules/extfs/Makefile
-modules/extfs/ar
-modules/extfs/cpio
-modules/extfs/deb
-modules/extfs/lha
-modules/extfs/rar
-modules/extfs/zip
-modules/extfs/zoo
 modules/vfolder/Makefile
 daemon/Makefile
 monikers/Makefile
