@@ -38,9 +38,6 @@ sftp: sftp
 
 ssh: ssh
 
-# The various access methods implemented by the extfs system.
-a ar arj cpio deb hp48 lha mailfs patchfs rar rpm rpms trpm zip zoo: extfs
-
 # vfolder desktop method
 applications:           vfolder-desktop
 applications-all-users: vfolder-desktop
